--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,3 +1,17 @@
+.carousel {
+    position: relative;
+    display: inline-block;
+}
+.carousel .carouselSlideControls button {
+    position: absolute;
+    top: 50%;
+}
+.carousel .carouselSlideControls button.slidePrevious {
+    left: 0;
+}
+.carousel .carouselSlideControls button.slideNext {
+    right: 0;
+}
 .carousel .carouselSlides {
     max-height: 250px;
     overflow: hidden;
